# VRMeshViewer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  us.stackdump
ext/hdrloader/: hdrloader.cpp
ext/rgbe/: rgbe.cpp  rgbe.hpp
include/: GLUtil.hpp  Gui.hpp  Settings.hpp  Vector.hpp  Viewer.hpp  common.hpp
include/leap/: GestureHandler.hpp  LeapListener.hpp  SkeletonHand.hpp
include/mesh/: BBox.hpp  Cube.hpp  Environment.hpp  Line.hpp  Mesh.hpp  ObjectLoader.hpp  Pin.hpp  Sphere.hpp  Texture.hpp  WavefrontObj.hpp  kdtree.hpp
include/network/: UDPSocket.hpp
include/renderer/: PerspectiveRenderer.hpp  Renderer.hpp  RiftRenderer.hpp
resources/hdr/: loft.hdr  loft_diffuse.hdr  museum.hdr  museum_diffuse.hdr  testgrid.hdr
resources/models/dragon/: dragon-annotations-1.txt
resources/shader/: bbox-fragment.glsl  bbox-vertex.glsl  fragment-shader.glsl  passthrough-fragment-shader.glsl  passthrough-vertex-shader.glsl  std-fragment-shader.glsl  std-vertex-shader.glsl  vertex-shader.glsl
src/: GLUtil.cpp  Gui.cpp  Settings.cpp  Viewer.cpp  common.cpp  main.cpp
src/leap/: GestureHandler.cpp  LeapListener.cpp  SkeletonHand.cpp
src/mesh/: Cube.cpp  Environment.cpp  Line.cpp  Mesh.cpp  ObjectLoader.cpp  Pin.cpp  Sphere.cpp  Texture.cpp  WavefrontObj.cpp  __Mesh.cpp
src/network/: UDPSocket.cpp
src/renderer/: PerspectiveRenderer.cpp  Renderer.cpp  RiftRenderer.cpp  rgbe.c
